# platform-nrf52

./: Cargo.toml  Embed.toml  build.rs  memory.x
.cargo/: config
src/: flash.rs  ghostfat.rs  main.rs  monotonic.rs  newlib.rs
