[package]
name = "embedded-wasm-nrf52"
version = "0.1.0"
edition = "2021"

[features]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

default = [ "defmt-default", "defmt-debug", "ghostfat/defmt", "ghostfat/defmt-debug" ]


[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
nrf52840-pac = "0.11.0"
nrf52840-hal = { version = "0.15.0", features = [ "rt" ] }

embedded-hal = "=1.0.0-alpha.7"

usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd_scsi = "0.1.0"
ghostfat = { version = "0.4.0", default_features = false, features = [ "nightly", "defmt", "defmt-debug" ] }

wasm-embedded-spec = { version="0.3.0", default_features=false }
wasm-embedded-rt-wasm3 = { version="*", default-features=false, features=[ "build-wasm3" ] }

# one day it should be possible to build and link this but, not today
# (can't get bindgen working for cross target)
#wasm3-sys = { version = "0.5.0", default-features=false, features = [ "build-bindgen" ], optional=true }

defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = "0.3.0"
fugit = "0.3.5"
packing = "0.2.0"

libc = { version = "0.2" , features = ["extra_traits"] }
libm = "0.2.2"
embedded-storage = "0.3.0"

# https://github.com/rust-embedded/book/issues/255
[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
features = ["c"]
optional = true

[profile.dev]
codegen-units = 1
debug = 2

[profile.release]
codegen-units = 1
debug = 2
panic = "abort"
#lto = true


[patch.crates-io]
# Local patches for wasm project
#wasm-embedded-spec = { path = "../wasm/spec" }
#wasm-embedded-rt-wasm3 = { path = "../wasm/rt_wasm3" }

# Git patches for wasm project
wasm-embedded-spec = { git = "https://github.com/embedded-wasm/spec" }
wasm-embedded-rt-wasm3 = { git = "https://github.com/embedded-wasm/rt_wasm3" }

#nrf52833-hal = { git = "https://github.com/nrf-rs/nrf-hal" }
#wasm3-sys = { path = "../forks/wasm3-rs/wasm3-sys" }

# You'll need to patch to run either a local or git version of ghostfat
ghostfat = { path = "../ghostfat" }
#ghostfat = { git = "https://github.com/ryankuttr/ghostfat" }
